@@ -570,15 +570,14 @@ HypreParMatrix * RAP(const HypreParMatrix *A, const HypreParMatrix *P);
 HypreParMatrix * RAP(const HypreParMatrix * Rt, const HypreParMatrix *A,
                      const HypreParMatrix *P);
 
-/// Returns the matrix constructed from blocks.
+/// Returns a merged hypre matrix constructed from hypre matrix blocks.
 /** It is assumed that all block matrices use the same communicator, and the
     block sizes are consistent in rows and columns. Rows and columns are
     renumbered but not redistributed in parallel, e.g. the block rows owned by
     each process remain on that process in the resulting matrix. Some blocks can
-    be null. Each block and the entire system can be rectangular. Scalability to
+    be NULL. Each block and the entire system can be rectangular. Scalability to
     extremely large processor counts is limited by global MPI communication, see
-    GatherBlockOffsetData in hypre.cpp.
-*/
+    GatherBlockOffsetData in hypre.cpp. */
 HypreParMatrix * HypreParMatrixFromBlocks(Array2D<HypreParMatrix*> &blocks,
                                           Array2D<double> *blockCoeff=NULL);
 
